# j2p

./: README.md  pyproject.toml
src/j2p/: __init__.py  _j2p.py  _parse_json.py  cli.py  pydantic.jinja
tests/: test_j2p.py
